[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://subpixel-a/subpixel-a.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 255
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
modulate = Color( 1, 0.917647, 0.929412, 1 )
self_modulate = Color( 1, 0.917647, 0.929412, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -121.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="MessageLabel" type="Label" parent="."]
modulate = Color( 1, 0.917647, 0.929412, 1 )
self_modulate = Color( 1, 0.917647, 0.929412, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -245.0
margin_right = 960.0
margin_bottom = -173.0
custom_fonts/font = SubResource( 2 )
text = "TAP TO START"
align = 1

[node name="StartButton" type="Button" parent="."]
modulate = Color( 1, 0.917647, 0.929412, 1 )
self_modulate = Color( 1, 0.917647, 0.929412, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "RONG"
flat = true

[node name="ScoreContainer" type="HSplitContainer" parent="."]
modulate = Color( 1, 0.917647, 0.929412, 1 )
self_modulate = Color( 1, 0.917647, 0.929412, 1 )
margin_top = 165.0
margin_right = 1920.0
margin_bottom = 309.0

[node name="BestScoreLabel" type="Label" parent="ScoreContainer"]
modulate = Color( 1, 0.917647, 0.929412, 1 )
self_modulate = Color( 1, 0.917647, 0.929412, 1 )
margin_top = 36.0
margin_right = 948.0
margin_bottom = 108.0
size_flags_horizontal = 15
custom_fonts/font = SubResource( 6 )
align = 1

[node name="LastScoreLabel" type="Label" parent="ScoreContainer"]
modulate = Color( 1, 0.917647, 0.929412, 1 )
self_modulate = Color( 1, 0.917647, 0.929412, 1 )
margin_left = 972.0
margin_top = 36.0
margin_right = 1920.0
margin_bottom = 108.0
size_flags_horizontal = 15
custom_fonts/font = SubResource( 5 )
align = 1
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
